--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,24 +24,41 @@
   }
 }
 
-.a-cards {
-  grid-area: ac;
+.a-cards,
+.b-cards {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: relative;
+
+  margin: 1em;
+  border: 1px solid black;
   @media (orientation: landscape) {
     flex-direction: column;
   }
+
+  .watermark {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    font-size: 5rem;
+    opacity: 0.08;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
+    z-index: -1;
+  }
+}
+
+.a-cards {
+  grid-area: ac;
 }
 
 .b-cards {
   grid-area: bc;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  @media (orientation: landscape) {
-    flex-direction: column;
-  }
 }
 
 .spare-card {
@@ -59,7 +76,7 @@
     position: relative;
     background-color: white;
 
-    .victory {
+    .watermark {
       position: absolute;
       top: 0;
       bottom: 0;
@@ -81,12 +98,5 @@
 
   .cell > .occupant {
     font-size: x-large;
-
-    &.side-a {
-      color: red;
-    }
-    &.side-b {
-      color: blue;
-    }
   }
 }
