--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,6 +1,8 @@
-<div class="icon">
-  {{card.icon}}
-</div>
-<div class="grid">
-  <div *ngFor="let cell of grid" class="cell" [class.active]="cell.isActive === true" [class.center]="cell.isCenter === true" [style.grid-column]="cell.x + 1" [style.grid-row]="cell.y + 1"></div>
-</div>
+<button type="button" [disabled]="disabled" [title]="card.name" (click)="action.emit()">
+  <div class="grid">
+    <div *ngFor="let cell of grid" class="cell" [class.active]="cell.isActive === true" [class.center]="cell.isCenter === true" [style.grid-column]="cell.x + 1" [style.grid-row]="cell.y + 1"></div>
+  </div>
+  <div class="icon">
+    {{card.icon}}
+  </div>
+</button>
