feat - happy path launch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<div class="a-cards" [class.active]="game.turn === 'a' && selectedCard === undefined">
-  <ogre-card *ngFor="let card of aCards" [card]="card" [class.active]="selectedCard === card" [disabled]="game.turn === 'b'" (action)="selectCard(card)"></ogre-card>
+<div class="a-cards" [class.active]="game.turn === 'a' && this.selectedCard === undefined">
+  <ogre-card *ngFor="let card of aCards" [card]="card" [isActive]="selectedCard === card" [disabled]="game.turn === 'b'" (action)="selectCard(card)"></ogre-card>
   <div class="watermark">♕</div>
 </div>
 
-<div class="b-cards" [class.active]="game.turn === 'b' && selectedCard === undefined">
-  <ogre-card *ngFor="let card of bCards" [card]="card" [class.active]="selectedCard === card" [disabled]="game.turn === 'a'" (action)="selectCard(card)"></ogre-card>
+<div class="b-cards" [class.active]="game.turn === 'b' && this.selectedCard === undefined">
+  <ogre-card *ngFor="let card of bCards" [card]="card" [isActive]="selectedCard === card" [disabled]="game.turn === 'a'" (action)="selectCard(card)"></ogre-card>
   <div class="watermark">♛</div>
 </div>
 
@@ -13,5 +13,5 @@
 </div>
 
 <div class="grid" [class.active]="selectedCard !== undefined">
-  <ogre-cell *ngFor="let cell of game.cells" [active]="cell === selectedCell" [cell]="cell" [disabled]="cell.occupant?.side !== game.turn || targetCells.includes(cell) === false" [isTarget]="targetCells.includes(cell) === true" [style.grid-column]="cell.x + 1" [style.grid-row]="cell.y + 1" (click)="selectCell(cell)"></ogre-cell>
+  <ogre-cell *ngFor="let cell of game.cells" [active]="cell === selectedCell" [cell]="cell" [isTarget]="targetCells.includes(cell) === true" [style.grid-column]="cell.x + 1" [style.grid-row]="cell.y + 1" (click)="selectCell(cell)"></ogre-cell>
 </div>
