feat - target color opaque

--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -10,4 +10,5 @@
   <div *ngIf="cell.victory" class="watermark">
     {{cell.victory === 'a' ? '♔' : '♚' }}
   </div>
+  <div *ngIf="isTarget === true" class="target-bg"></div>
 </button>
