--- a/src/app/cell/cell.component.scss
+++ b/src/app/cell/cell.component.scss
@@ -30,10 +30,17 @@
   background-color: #eee;
 }
 
-.is-target {
-  background-color: yellow;
-}
-
 .cell > .occupant {
   font-size: x-large;
+}
+
+
+.target-bg {
+  opacity: 0.2;
+  background: yellow;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
