--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,82 +1,7 @@
-:host {
+footer {
   position: absolute;
-  top: 0;
+  top: 100%;
   right: 0;
-  bottom: 0;
   left: 0;
-
-  display: grid;
-  @media (orientation: landscape) {
-    grid-template-areas:
-      "ac sc sc sc bc"
-      "ac gd gd gd bc"
-      "ac gd gd gd bc"
-      "ac gd gd gd bc";
-  }
-  @media (orientation: portrait) {
-    grid-template-areas:
-      "gd gd gd"
-      "gd gd gd"
-      "gd gd gd"
-      "ac ac ac"
-      "sc sc sc"
-      "bc bc bc";
-  }
-}
-
-.active {
-  box-shadow: 0 0 1em black;
-}
-
-.a-cards,
-.b-cards {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  position: relative;
-
   margin: 1em;
-  border: 1px solid lightgrey;
-  border-radius: 0.5em;
-  @media (orientation: landscape) {
-    flex-direction: column;
-  }
-
-  .watermark {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    font-size: 5rem;
-    opacity: 0.08;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    user-select: none;
-    z-index: -1;
-  }
-}
-
-.a-cards {
-  grid-area: ac;
-}
-
-.b-cards {
-  grid-area: bc;
-}
-
-.spare-card {
-  grid-area: sc;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.grid {
-  grid-area: gd;
-  display: grid;
-  grid-gap: 1px;
-  background-color: black;
-  border: 1px solid black;
 }
