feat - footer form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
 <ogre-game></ogre-game>
 <footer>
-  Jimmeh
+  <form>
+    <fieldset>
+      <legend>Options</legend>
+      <!-- concede button -->
+    </fieldset>
+    <br />
+    <fieldset>
+      <legend>Bot Options</legend>
+      <!-- enabled, search depth -->
+    </fieldset>
+  </form>
 </footer>
