--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,26 +1,20 @@
-:host {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+#game {
+  height: 100vh;
 
   display: grid;
-  @media (orientation: landscape) {
+  grid-template-areas:
+    "gd gd gd"
+    "gd gd gd"
+    "gd gd gd"
+    "ac sc bc"
+    "ac sc bc"
+    "ac sc bc";
+  @media (min-width: 1100px) {
     grid-template-areas:
       "ac sc sc sc bc"
       "ac gd gd gd bc"
       "ac gd gd gd bc"
       "ac gd gd gd bc";
-  }
-  @media (orientation: portrait) {
-    grid-template-areas:
-      "gd gd gd"
-      "gd gd gd"
-      "gd gd gd"
-      "ac sc bc"
-      "ac sc bc"
-      "ac sc bc";
   }
 }
 
@@ -46,7 +40,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    font-size: 5rem;
+    font-size: 10rem;
     opacity: 0.08;
     display: flex;
     align-items: center;
@@ -67,8 +61,16 @@
 .spare-card {
   grid-area: sc;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  @media (min-width: 1100px) {
+    flex-direction: row;
+  }
+
+  .arrow {
+    user-select: none;
+  }
 }
 
 .grid {
