fix - pawn title width

--- a/src/app/game/cell/cell.component.html
+++ b/src/app/game/cell/cell.component.html
@@ -1,11 +1,11 @@
 <button class="cell" type="button" [class.active]="active === true" [class.accent]="(cell.x + cell.y) % 2 === 0" [class.is-target]="isTarget === true" [disabled]="disabled === true">
   <div *ngIf="cell.occupant !== undefined" class="occupant">
-    <div *ngIf="cell.occupant!.isMain === true" title="Main Pawn">
+    <span *ngIf="cell.occupant!.isMain === true" title="Main Pawn">
       {{cell.occupant!.side === 'a' ? '♔' : '♚'}}
-    </div>
-    <div *ngIf="cell.occupant!.isMain === false" title="Pawn">
+    </span>
+    <span *ngIf="cell.occupant!.isMain === false" title="Pawn">
       {{cell.occupant!.side === 'a' ? '♙' : '♟'}}
-    </div>
+    </span>
   </div>
   <div *ngIf="cell.victory" class="watermark">
     {{cell.victory === 'a' ? '♔' : '♚' }}
