--- a/src/app/game/form/form.component.html
+++ b/src/app/game/form/form.component.html
@@ -20,4 +20,11 @@
     </fc-toggle> -->
     <!-- search depth - number input -->
   </fieldset>
+  <br />
+  <fieldset>
+    <legend title="Deck Settings">
+      🎴 ⚙️
+    </legend>
+    <ogre-deck [model]="model.deck"></ogre-deck>
+  </fieldset>
 </form>
