--- a/src/app/game/form/deck/deck.component.scss
+++ b/src/app/game/form/deck/deck.component.scss
@@ -1,12 +1,24 @@
 :host {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   grid-gap: 0.5em;
+  grid-template-columns: repeat(2, 1fr);
+  @media (min-width: 1100px) {
+    grid-template-columns: repeat(5, 1fr);
+  }
 
-  label {
+  div {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     cursor: default;
+
+    border: 1px solid lightgrey;
+    border-radius: 0.25em;
+    padding: 0.25em;
+
+    fc-toggle {
+      margin-bottom: 0.25em;
+    }
   }
 }
