--- a/src/app/game/form/deck/deck.component.scss
+++ b/src/app/game/form/deck/deck.component.scss
@@ -2,6 +2,9 @@
   display: grid;
   grid-gap: 0.5em;
   grid-template-columns: repeat(2, 1fr);
+  @media (min-width: 900px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
   @media (min-width: 1100px) {
     grid-template-columns: repeat(5, 1fr);
   }
