feat - deck x scroll

--- a/src/app/game/form/form.component.html
+++ b/src/app/game/form/form.component.html
@@ -22,7 +22,7 @@
     </div>
   </fieldset>
   <br />
-  <fieldset>
+  <fieldset id="deck-fieldset">
     <legend title="Deck Settings">
       🎴 ⚙️
     </legend>
