--- a/src/app/game/form/deck/deck.component.scss
+++ b/src/app/game/form/deck/deck.component.scss
@@ -1,13 +1,6 @@
 :host {
-  display: grid;
-  grid-gap: 0.5em;
-  grid-template-columns: repeat(2, 1fr);
-  @media (min-width: 900px) {
-    grid-template-columns: repeat(4, 1fr);
-  }
-  @media (min-width: 1100px) {
-    grid-template-columns: repeat(5, 1fr);
-  }
+  display: flex;
+  overflow-x: auto;
 
   div {
     display: flex;
@@ -16,9 +9,7 @@
     align-items: center;
     cursor: default;
 
-    border: 1px solid lightgrey;
-    border-radius: 0.25em;
-    padding: 0.25em;
+    margin: 0.5em;
 
     fc-toggle {
       margin-bottom: 0.25em;
