--- a/src/app/game/form/form.component.scss
+++ b/src/app/game/form/form.component.scss
@@ -1,22 +1,7 @@
 form {
   margin: auto;
-  padding: 1em 0;
+  padding: 1em;
 
-  @media (min-width: 576px) {
-    max-width: 540px;
-  }
-
-  @media (min-width: 768px) {
-    max-width: 720px;
-  }
-
-  @media (min-width: 992px) {
-    max-width: 960px;
-  }
-
-  @media (min-width: 1200px) {
-    max-width: 1140px;
-  }
   fieldset {
     padding: 1em;
     border: 1px solid lightgrey;
