feat - cursor for good cell

--- a/src/app/game/cell/cell.component.html
+++ b/src/app/game/cell/cell.component.html
@@ -1,4 +1,4 @@
-<button class="cell" type="button" [class.active]="active === true" [class.accent]="(cell.x + cell.y) % 2 === 0" [class.is-target]="isTarget === true" [disabled]="disabled === true" (click)="action.emit()">
+<button type="button" [class.active]="active === true" [class.accent]="(cell.x + cell.y) % 2 === 0" [class.is-target]="isTarget === true" [disabled]="disabled === true" (click)="action.emit()">
   <div *ngIf="cell.occupant !== undefined" class="occupant">
     <span *ngIf="cell.occupant!.isMain === true" title="Main Pawn">
       {{cell.occupant!.side === 'a' ? '♔' : '♚'}}
