--- a/src/app/game/cell/cell.component.scss
+++ b/src/app/game/cell/cell.component.scss
@@ -1,9 +1,15 @@
-.cell {
+button {
   width: 100%;
   height: 100%;
   position: relative;
   background-color: white;
   border: none;
+  font-size: x-large;
+  cursor: pointer;
+
+  &:disabled {
+    cursor: default;
+  }
 
   .watermark {
     position: absolute;
@@ -28,10 +34,6 @@
 
 .accent {
   background-color: #eee;
-}
-
-.cell > .occupant {
-  font-size: x-large;
 }
 
 .target-bg {
