--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -78,6 +78,15 @@
   grid-area: gd;
   display: grid;
   grid-gap: 1px;
-  background-color: black;
-  border: 1px solid black;
+  grid-auto-rows: minmax(0, 1fr);
+  grid-auto-columns: minmax(0, 1fr);
+  background-color: #000;
+  border-width: 1px;
+  border-color: #000;
+  border-bottom-style: solid;
+  @media (min-width: 1100px) {
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+  }
 }
