--- a/src/app/game/card/card.component.scss
+++ b/src/app/game/card/card.component.scss
@@ -3,12 +3,11 @@ button {
   padding: 1em;
   border-width: medium;
   border-color: lightgrey;
-  border-radius: 0.5em;
   display: flex;
   align-items: center;
 
   &.is-active {
-    box-shadow: 0 0 1em black;
+    box-shadow: inset 0 0 1em black;
   }
 
   &:disabled {
