--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -2,6 +2,9 @@
   height: 100vh;
   min-height: 650px;
 
+  background-color: black;
+  border-bottom: 1px solid black;
+  box-shadow: 0.2em 0.2em 0.2em 0 lightgrey;
   display: grid;
   grid-template-areas:
     "gd gd gd"
@@ -19,21 +22,14 @@
   }
 }
 
-.active {
-  box-shadow: 0 0 1em black;
-}
-
 .a-cards,
 .b-cards {
+  background-color: white;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
   position: relative;
-
-  margin: 1em;
-  border: 1px solid lightgrey;
-  border-radius: 0.5em;
-  flex-direction: column;
 
   .watermark {
     position: absolute;
@@ -47,7 +43,10 @@
     align-items: center;
     justify-content: center;
     user-select: none;
-    z-index: -1;
+    z-index: 1;
+  }
+  > ogre-card {
+    z-index: 2;
   }
 }
 
@@ -65,6 +64,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  background-color: white;
   @media (min-width: 1100px) {
     flex-direction: row;
   }
@@ -85,6 +85,7 @@
   border-color: #000;
   border-bottom-style: solid;
   @media (min-width: 1100px) {
+    border-bottom-style: none;
     border-top-style: solid;
     border-right-style: solid;
     border-left-style: solid;
