--- a/src/app/game/cell/cell.component.scss
+++ b/src/app/game/cell/cell.component.scss
@@ -13,7 +13,15 @@ button {
     border: none;
   }
 
-  .watermark {
+  &.accent {
+    background-color: #f6f6f6;
+  }
+
+  &.active {
+    box-shadow: inset 0 0 1em black;
+  }
+
+  > .watermark {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -28,22 +36,14 @@ button {
     pointer-events: none;
     overflow: hidden;
   }
-}
 
-.active {
-  box-shadow: inset 0 0 1em black;
-}
-
-.accent {
-  background-color: #f6f6f6;
-}
-
-.target-bg {
-  opacity: 0.2;
-  background: yellow;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  > .target-bg {
+    opacity: 0.2;
+    background: #247;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 }
