--- a/src/app/game/form/form.component.scss
+++ b/src/app/game/form/form.component.scss
@@ -5,7 +5,8 @@ form {
   fieldset {
     padding: 1em;
     border: 1px solid black;
-    box-shadow: 0.2em 0.2em 0.2em 0 lightgrey;
+    border-radius: 0.5em;
+    box-shadow: 0.2em 0.2em 0.2em 0 black;
   }
 
   #bot {
