--- a/src/app/game/card/card.component.scss
+++ b/src/app/game/card/card.component.scss
@@ -3,6 +3,7 @@ button {
   padding: 1em;
   border-width: medium;
   border-color: lightgrey;
+  border-radius: 0.5em;
   display: flex;
   align-items: center;
 
