--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -20,7 +20,6 @@
 
 .a-cards,
 .b-cards {
-  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -72,8 +71,9 @@
 .grid {
   grid-area: gd;
   display: grid;
-  grid-auto-rows: minmax(0, 1fr);
-  grid-auto-columns: minmax(0, 1fr);
+  margin: auto;
+  grid-auto-rows: max(min(10vw, 10vh), 2em);
+  grid-auto-columns: max(min(10vw, 10vh), 2em);
 }
 
 footer {
